# smol-noice

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  component.mk
.circleci/: config.yml
inc/: err.h  handshake.h  msg.h  port.h  sc_err.h  sc_packet.h  smol-noice-internal.h  smol-noice.h  sn_buffer.h  sn_err.h  sn_msg.h  sn_packet.h  statemachine.h  transport.h
src/: handshake.c  msg.c  sc_err.c  sc_packet.c  smol-noice.c  sn_buffer.c  sn_err.c  sn_msg.c  sn_packet.c  statemachine.c  transport.c
src/port/: queue.h
src/port/Linux/: port_Linux.c  queue.c  queue.h
src/port/darwin/: port_darwin.c
src/port/freeRTOS/: port_freeRTOS.c  queue.c
test-project/: .gitignore  CMakeLists.txt  nvs_data.bin.tmp  nvs_data.csv  nvs_partition_gen.py  partitions.csv  sdkconfig  sdkconfig.old  version.txt
test-project/components/cl-I2C-HAL/: CMakeLists.txt  cl-I2C-HAL.c
test-project/components/cl-I2C-HAL/include/: cl-I2C-HAL.h
test-project/components/cl-MCP23008-HAL/: CMakeLists.txt  cl-MCP23008-HAL.c
test-project/components/cl-PortOpen/: CMakeLists.txt  cl-PortOpen-cmd.c  cl-PortOpen.c
test-project/components/cl-PortOpen/include/: cl-PortOpen.h
test-project/components/cl-gpio-hal/: CMakeLists.txt  cl-gpio-hal.c
test-project/components/deviceData-cl/: deviceData-cl.c
test-project/components/nvs-cl/: CMakeLists.txt  cmd-nvs-cl.c  component.mk  nvs-cl.c
test-project/components/wifi-cl/: CMakeLists.txt  cmd-wifi-cl.c  wifi-cl.c
test-project/main/: CMakeLists.txt  hello_world_main.c
tests/: all_tests.c
tests/smolcert-c/: all_tests.c
(+5 files in other folders)
